@@ -1,3 +1,6 @@
+[B]Version 4.3.0[/B]
+    -pv2 sports back
+    
 [B]Version 4.2.9[/B]
     -v3 channels are back, also ipbox enabled on requests
 [B]Version 4.2.8[/B]
